syntax = "proto3";
package dto;
option java_package = "com.bestStore";
option java_multiple_files = true;

message AuthenticationCredentials{
  string email = 1;
  string password = 2;
}


