syntax = "proto3";
package auth;
option java_package = "com.bestStore.auth";
option java_multiple_files = true;
import "auth-service/dto/authentication_credentials.proto";
import "auth-service/dto/result.proto";

service RegistrationServiceGrpc{
  rpc registration (dto.AuthenticationCredentials) returns(dto.Result);
}
